Full ColorTag implementation